--- a/client/src/features/userProfile/profileStyle.css
+++ b/client/src/features/userProfile/profileStyle.css
@@ -1,15 +1,56 @@
-.zone1 {
+.zone1pc {
     background-color: #FFFFFF;
     padding: 40px;
     font-family: Arial;
     text-align: left;
-    height: 120vh;
+    height: 145vh;
   }
 
-  .zone2 {
+  .zone2pc {
     background-color: #fbf1df;
-    height: 120vh;
+    height: 145vh;
   }
+
+  .zone1tablet {
+    background-color: #FFFFFF;
+    padding: 40px;
+    font-family: Arial;
+    text-align: left;
+    height: 140vh;
+  }
+
+  .zone2tablet {
+    background-color: #fbf1df;
+    height: 60vh;
+  }
+
+  .zone2Phone {
+    background-color: #fbf1df;
+    height: 40vh;
+  }
+  
+
+  .logoPhotoPC {
+    padding-left:0%;
+    padding-top: 100px;
+  }
+
+  .logoPhotoTablet {
+    padding-left:0%;
+    margin-left: auto;
+    margin-right: auto;
+  
+  }
+
+  .logoPhotoMobile {
+    width: 70%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  
+  }
+
+
 
   .profileHeader {
     text-align: left;
@@ -18,85 +59,15 @@
   
   .brownHeader {
     color: #8f5f15;
-  }  
+  } 
   
+ .spaceObject
+ {
+  padding-right: 1rem;
+  margin-bottom: 1rem;
+ }
   
 
-
-  input.sort {
-    border: 1px solid #ccc;
-    background-color: #fbf1df;
-    /* Safari 5, Chrome support border-radius without vendor prefix.
-     * FF 3.0/3.5/3.6, Mobile Safari 4.0.4 require vendor prefix.
-     * No support in Safari 3/4, IE 6/7/8, Opera 10.0.
-     */
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    
-    /* Chrome, FF 4.0 support box-shadow without vendor prefix.
-     * Safari 3/4/5 and FF 3.5/3.6 require vendor prefix.
-     * No support in FF 3.0, IE 6/7/8, Opera 10.0, iPhone 3.
-     * change the offsets, blur and color to suit your design.
-     */
-    -moz-box-shadow: 2px 2px 3px #666;
-    -webkit-box-shadow: 2px 2px 3px #666;
-    box-shadow: 2px 2px 3px #666;
-    
-    /* using a bigger font for demo purposes so the box isn't too small */
-    font-size: 20px;
-    
-    /* with a big radius/font there needs to be padding left and right
-     * otherwise the text is too close to the radius.
-     * on a smaller radius/font it may not be necessary
-     */
-    padding: 8px 7px;
-    
-    /* only needed for webkit browsers which show a rectangular outline;
-     * others do not do outline when radius used.
-     * android browser still displays a big outline
-     */
-    outline: 0;
-  
-  }
-
-
-  input.long {
-    border: 1px solid #ccc;
-    background-color: #fbf1df;
-    /* Safari 5, Chrome support border-radius without vendor prefix.
-     * FF 3.0/3.5/3.6, Mobile Safari 4.0.4 require vendor prefix.
-     * No support in Safari 3/4, IE 6/7/8, Opera 10.0.
-     */
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    
-    /* Chrome, FF 4.0 support box-shadow without vendor prefix.
-     * Safari 3/4/5 and FF 3.5/3.6 require vendor prefix.
-     * No support in FF 3.0, IE 6/7/8, Opera 10.0, iPhone 3.
-     * change the offsets, blur and color to suit your design.
-     */
-    -moz-box-shadow: 2px 2px 3px #666;
-    -webkit-box-shadow: 2px 2px 3px #666;
-    box-shadow: 2px 2px 3px #666;
-    
-    /* using a bigger font for demo purposes so the box isn't too small */
-    font-size: 20px;
-    
-    /* with a big radius/font there needs to be padding left and right
-     * otherwise the text is too close to the radius.
-     * on a smaller radius/font it may not be necessary
-     */
-    padding: 8px 210px;
-    
-    /* only needed for webkit browsers which show a rectangular outline;
-     * others do not do outline when radius used.
-     * android browser still displays a big outline
-     */
-    outline: 0;
-  
-  }
 
 
   
